@@ -132,6 +132,7 @@ IREP_ID_ONE(posedge)
 IREP_ID_ONE(event_guard)
 IREP_ID_ONE(verilog_star_event)
 IREP_ID_ONE(verilog_checker)
+IREP_ID_ONE(verilog_clocking)
 IREP_ID_ONE(verilog_cycle_delay)
 IREP_ID_ONE(delay)
 IREP_ID_ONE(verilog_non_blocking_assign)
