@@ -844,6 +844,9 @@ void verilog_typecheckt::collect_symbols(
   else if(module_item.id() == ID_verilog_package_import)
   {
   }
+  else if(module_item.id() == ID_verilog_clocking)
+  {
+  }
   else if(module_item.id() == ID_verilog_covergroup)
   {
   }
