@@ -1734,6 +1734,9 @@ void verilog_typecheckt::convert_module_item(
   else if(module_item.id() == ID_verilog_package_import)
   {
   }
+  else if(module_item.id() == ID_verilog_clocking)
+  {
+  }
   else if(module_item.id() == ID_verilog_covergroup)
   {
   }
